Adapt like to demonstration, ie. report bugs resolution

--- a/PIE-v0.1/share/config/pie/Alice.conf
+++ b/PIE-v0.1/share/config/pie/Alice.conf
@@ -4,19 +4,19 @@
 # nickname and car_id MUST be set
 
 # Define pie user nickanme
-nickname=Titi
+nickname=Alice
 
 # Set the VIN or its hash of your
 # car here, the hash corresponding
-# to the VIN : 4V3I0JZH35P3GGHT
-car_id=8522173BB1EE56BE0B9C03D026AB58C8
+# to the VIN : 4VZ1D3PGC4C87YT
+car_id=8BB8B0A146223D0C097F9EC7D2DFBAE1
 
 # Some optional fields (additional information about pie user)
-fullname=GrosMinet
-firstname=Titi
-age=<undefined>
-sex=canari
-email=Titi.EtGrosMinet@hollywood.org
-phone_nb=canal+
-dest=hollywood's studios
-desc=Titi n'a pas peur de GrosMinet
+fullname=Merveilles
+firstname=Alice
+age=27
+sex=femme
+email=alice.merveilles@sr05example.org
+phone_nb=+336.32.25.66.36
+dest=Compiegne
+desc=Etudiante UTC, utilisatrice de pie
