--- a/PIE-v0.1/share/config/pie/Bob.conf
+++ b/PIE-v0.1/share/config/pie/Bob.conf
@@ -4,19 +4,19 @@
 # nickname and car_id MUST be set
 
 # Define pie user nickanme
-nickname=Titi
+nickname=Boby
 
 # Set the VIN or its hash of your
 # car here, the hash corresponding
-# to the VIN : 4V3I0JZH35P3GGHT
-car_id=8522173BB1EE56BE0B9C03D026AB58C8
+# to the VIN : YV26JG4RESMHP1TP
+car_id=589A2E805480FF971CC244448D51DADD
 
 # Some optional fields (additional information about pie user)
-fullname=GrosMinet
-firstname=Titi
-age=<undefined>
-sex=canari
-email=Titi.EtGrosMinet@hollywood.org
-phone_nb=canal+
-dest=hollywood's studios
-desc=Titi n'a pas peur de GrosMinet
+fullname=Robert
+firstname=Bob
+age=28
+sex=homme
+email=bob.robert@sr05example.org
+phone_nb=+336.12.25.66.56
+dest=Paris, la défense
+desc=Utilisateur de pie
