--- a/PIE-v0.1/share/config/pie/global.conf
+++ b/PIE-v0.1/share/config/pie/global.conf
@@ -13,7 +13,7 @@ show_global_conf_tab=false
 show_nettraces_tab=true
 show_pietraces_tab=true
 show_outputs_tab=false
-show_inputs_tab=false
-show_forwarded_tab=true
-show_subscribed_tab=true
+show_inputs_tab=true
+show_forwarded_tab=false
+show_subscribed_tab=false
 show_localmesg_tab=false
